components/nonmem/src/output_files/snapshots/nonmem__output_files__grd__tests__1002_no_comments@1002.grd.snap
---
source: components/nonmem/src/output_files/grd.rs
expression: "result[0].to_csv()"
input_file: components/nonmem/test_data/grd/1002.grd
---
ITERATION,GRD(THETA1),GRD(THETA2),GRD(THETA3),GRD(THETA5),GRD(THETA6),GRD(ETA1),GRD(ETA2),GRD(ETA3),GRD(EPS1)
0,104.488,-95.4773,49.9739,23.6642,-102.008,10.0969,-8.33398,0.754637,116.672
5,26.2157,4.17784,69.0667,-41.0023,67.5756,1.79456,-0.237827,-4.97533,-59.4011
10,15.227,98.589,-38.7969,-31.3194,85.5336,-14.8129,-11.3803,-11.2333,-35.9647
15,0.199057,1.46082,-0.127064,0.130356,0.345353,-0.0577738,-0.191362,-0.115737,-0.777356
18,-0.0856477,0.0148495,-0.0869667,-0.0199319,-0.0390167,-0.00929879,-0.00661927,0.0052416,0.0234709
