components/nonmem/src/output_files/snapshots/nonmem__output_files__grd__tests__3142vc_type1_comments@3142vc.grd.snap
---
source: components/nonmem/src/output_files/grd.rs
expression: "result[0].to_csv()"
input_file: components/nonmem/test_data/grd/3142vc.grd
---
ITERATION,GRD(THETA1),GRD(THETA3),"GRD(OMEGA(2,2))","GRD(OMEGA(3,2))","GRD(OMEGA(4,2))","GRD(OMEGA(3,3))","GRD(OMEGA(4,3))","GRD(OMEGA(4,4))","GRD(SIGMA(1,1))"
0,3202.67,-4857.35,-460.555,-4475.8,957.868,-0.418408,49.6798,-100.755,-90.5438
5,-4967.18,2611.24,-203.011,1037.66,2.06059,15.0642,-7.8816,2.63751,192.675
10,-1369.17,2381.34,-150.562,732.869,-16.4407,17.9122,-4.0634,0.0027797,8.88714
15,536.343,-483.499,28.0864,-170.242,6.41185,9.55144,-0.258247,-0.000068159,4.38297
20,-11.4306,26.1333,-0.833815,-0.705029,0.430468,-0.508294,-0.00932292,0,-0.197399
25,-0.197609,-0.107033,-0.00381455,0.12896,-0.0055592,0.000176081,0.000345914,0,-0.00890003
