components/nonmem/src/output_files/snapshots/nonmem__output_files__grd__tests__bql_type1_comments@bql.grd.snap
---
source: components/nonmem/src/output_files/grd.rs
expression: "result[0].to_csv()"
input_file: components/nonmem/test_data/grd/bql.grd
---
ITERATION,GRD(1),GRD(2),GRD(3),GRD(4),GRD(5),GRD(6),GRD(7),GRD(8),GRD(9)
0,-38.5637,43.3306,233.602,212.306,212.964,-5.05976,28.6949,-15.8136,68.1739
5,87.7424,121.696,-76.4019,-38.5538,11.1845,1.49158,-0.792549,-7.83724,-17.6672
10,48.2733,57.8413,-37.4416,-9.60467,-3.67563,6.15748,-3.10332,3.6398,-20.311
15,0.0490842,-0.188566,0.0287641,-0.0841449,0.0965406,-0.000406497,-0.00846918,0.00266463,0.00559161
16,0.0490842,-0.188566,0.0287641,-0.0841449,0.0965406,-0.000406497,-0.00846918,0.00266463,0.00559161
