components/nonmem/src/output_files/snapshots/nonmem__output_files__grd__tests__can_parse_grd_files_with_type1_comment@run002.grd.snap
---
source: components/nonmem/src/output_files/grd.rs
expression: "result[0].to_csv()"
input_file: components/nonmem/test_data/grd/run002.grd
---
ITERATION,GRD(THETA1),GRD(THETA2),GRD(THETA3),GRD(ETA1),GRD(ETA2),GRD(ETA3),GRD(EPS1),GRD(EPS2)
0,-0.238364,0.434772,-0.334223,0.0333661,0.114883,-2.04802,0.340024,1.11603
5,1.23194,-0.914972,0.377112,-0.411332,0.991775,0.296604,1.92617,0.500827
10,0.00184041,-0.00225898,-0.00212048,0.00222174,-0.00142771,0.00296243,0.0159924,0.00234632
15,0.0000241066,0.0000173623,0.00000320979,0.00000226613,-0.000111782,-0.0000443439,-0.000122955,0.0000127956
