components/nonmem/src/output_files/snapshots/nonmem__output_files__grd__tests__run001_type1_comments@run001.grd.snap
---
source: components/nonmem/src/output_files/grd.rs
expression: "result[0].to_csv()"
input_file: components/nonmem/test_data/grd/run001.grd
---
ITERATION,GRD(TVCL),GRD(TVV),GRD(TVKA),"GRD(OM1 (TVCL))","GRD(OM2 (TVV))","GRD(SIGMA(1,1))"
0,-95.2401,-154.473,-50.3937,-18.5651,-58.3561,16.987
5,-5.65185,-13.1776,-2.36722,-1.17689,-4.06991,1.21143
10,-0.0538199,-1.24398,-0.243247,0.0256664,0.151531,-0.0160471
13,0.00312907,-0.000827509,0.0013005,0.000192388,0.000149836,0.00063828
